@@ -71,3 +71,8 @@
 - gave the app a user property
 - added a activeProblem property to servers 
 - the user and active stuff is the base for the submission and point system 
+
+6/7/2025
+~~~~~~~~~~
+- made the submitter
+- minor to make it work and make it flow better
